examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_application.st
language core;

fn main(f : fn(Bool) -> Bool) -> Bool {
    return f(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
